2008-03-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsmain.c:
	* nsd/nsd.h: Use PACKAGE_XXXX macros for consistency

2008-03-11  Vlad Seryakov  <seryakov@users.sf.net>

	* Remove Makefile.win32 everywhere, this build model is not supported and
	i do not see any reason to keep it.

2008-03-09  Vlad Seryakov  <seryakov@users.sf.net>

    	* include/ns.h:
    	* nsd/nsmain.c:
    	* nsd/log.c:
    	* nslog/nslog.c: Added new public function Ns_HomePathExists, server now can be run from the
    	current directlry if all required files are located in one place, this is for very small/embedded or test
    	environments. Previous functionality works as usual.

    	* include/nsthread.h:
    	* include/ns.h
    	* nsd/nsd.h:
    	* nsd/nswin32.c: Moved all platform specific definition into nsthread.h, fixed Win32 specific
    	errors regarding int64 and printf.

	* include/nsconfig.h.in: use nsconfig.h if HAVE_CONFIG_H is defined, this way
	config file can be distributed and will not be reason for config.h collisions

    
2008-03-08  Vlad Seryakov  <seryakov@users.sf.net>
	* Makefile configure.in include/Makefile.global.in
	include/Makefile.module.in include/ns.h include/nsthread.h
	modules/nsloopctl/nsloopctl.c nsd/Makefile nsd/adpeval.c
	nsd/adprequest.c nsd/config.c nsd/dns.c nsd/fastpath.c
	nsd/fd.c nsd/nsd.h nsd/nswin32.c nsd/queue.c nsd/sched.c
	nsd/tclcache.c nsd/tcljob.c nsd/tclmisc.c nsd/tcltime.c
	nsd/unix.c nsd/watchdog.c nsdb/db.h nslog/nslog.c
	nsperm/nsperm.c nsproxy/nsproxylib.c nsthread/Makefile
	nsthread/fork.c nsthread/nsthreadtest.c nsthread/pthread.c
	nsthread/signal.c nsthread/thread.c nsthread/winthread.c: Port to Win32
	platform using Mingw32/Msys environment. Msys is what Tcl project using, same
	basic archive is what needed to conpile navoiserber for win32. Works stable as oppose to
	MSVC compiled code which used to crash for unknown reasons. Same configure script is used
	and config.h.

