@@ -174,6 +174,7 @@ extern Tcl_ObjCmdProc
     NsTclReturnNotFoundObjCmd,
     NsTclReturnNoticeObjCmd,
     NsTclReturnObjCmd,
+    NsTclInternalRedirectObjCmd,
     NsTclReturnRedirectObjCmd,
     NsTclReturnUnauthorizedObjCmd,
     NsTclReturnUnavailableObjCmd,
@@ -451,6 +452,7 @@ static Cmd servCmds[] = {
     {"ns_returnnotfound", NULL, NsTclReturnNotFoundObjCmd},
     {"ns_returnnotice", NULL, NsTclReturnNoticeObjCmd},
     {"ns_returnredirect", NULL, NsTclReturnRedirectObjCmd},
+    {"ns_internalredirect", NULL, NsTclInternalRedirectObjCmd},
     {"ns_returnunauthorized", NULL, NsTclReturnUnauthorizedObjCmd},
     {"ns_returnunavailable", NULL, NsTclReturnUnavailableObjCmd},
     {"ns_runonce", NULL, NsTclRunOnceObjCmd},
